--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,17 +2,23 @@
 <div>
   <table class="table-bordered table-condensed">
     <tr>
-      <td>時間管理表</td>
+      <td>
+        <%= link_to "←", user_path(params: {id: @user.id, first_day: @first_day.prev_month }),
+        class: "btn btn-xs btn-primary" %>
+        &emsp;<%= @first_day.to_s(:year_month) %>　時間管理表&emsp;
+        <%= link_to "→", user_path(params: {id: @user.id, first_day: @first_day.next_month }),
+        class: "btn btn-xs btn-primary" %>        
+      </td>
       <td>指定勤務時間<%= format_basic_time(@user.work_time) %></td>
       <td>基本時間<%= format_basic_time(@user.basic_time) %></td>
-      <td>月の初日</td>
+      <td>初日 <%= @first_day.to_s(:date) %></td>
     </tr>
 
     <tr>
       <td>所属：<%= @user.department.present? ? @user.department : "未設定" %></td>
       <td>氏名：<%= @user.name %></td>
       <td>出勤日数</td>
-      <td>月の末日</td>
+      <td>締日 <%= @last_day.to_s(:date) %></td>
     </tr>
   </table>
   
@@ -41,9 +47,13 @@
         <tr>
           <td><%= day.worked_on.to_s(:date) %></td>
           <td><%= %w{日 月 火 水 木 金 土}[day.worked_on.wday] %></td>
-          <td></td>
-          <td></td>
-          <td></td>
+          <td><%= day.started_at.to_s(:hour) if day.started_at.present? %></td>
+          <td><%= day.started_at.to_s(:min) if day.started_at.present? %></td>
+          <td>
+            <% if day.worked_on == Date.today && day.started_at.nil? %>
+              <%= button_to "出社", user_attendances_path(@user), class: "btn btn-xs btn-primary"%>
+            <% end %>
+          </td>
           <td></td>
           <td></td>
           <td></td>
