--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,7 +21,7 @@
       <td>締日 <%= @last_day.to_s(:date) %></td>
     </tr>
   </table>
-  
+  <%= link_to "勤怠編集", edit_attendances_path(@user, @first_day), class: "btn btn-primary" %>
   <table class = "table-bordered table-striped table-condensed">
     <thead>
       <tr>
@@ -68,7 +68,7 @@
             <% @total_secontds = @total_seconds.to_i + seconds %>
             <% end %>
           </td>
-          <td></td>
+          <td><%= day.note %></td>
         </tr>
       <% end %>
     </tbody>
