japanease language finish

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -63,9 +63,9 @@
           </td>
           <td>
             <% if day.started_at.present? && day.finished_at.present? %>
-            <%= working_times(day.started_at, day.finished_at) %>
-            <% seconds = (day.finished_at - day.started_at).to_i %>
-            <% @total_secontds = @total_seconds.to_i + seconds %>
+              <%= working_times(day.started_at, day.finished_at) %>
+              <% seconds = (day.finished_at - day.started_at).to_i %>
+              <% @total_seconds = @total_seconds.to_i + seconds %>
             <% end %>
           </td>
           <td><%= day.note %></td>
