--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to "勤怠管理システム", root_path, id: "logo" %>
+    <%= link_to "勤怠システム", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "ホーム", root_path %></li>
@@ -8,7 +8,7 @@
           <li><%= link_to "ユーザ一覧", users_path %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              アカウント<b class="caret"></b>
+              アカウント <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
               <li><%= link_to "ユーザー勤怠情報表示", current_user %></li>
