--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,6 @@
 <% provide(:title, "ホーム") %>
 <div class="center jumbotron">
-  <h1>勤怠管理システム</h1>
-  <%= link_to "アカウント作成", signup_path, class: "btn btn-lg btn-primary" %>
+  <h1>勤怠システム</h1>
+  <%= link_to "ログイン", login_path, class: "btn btn-lg btn-primary" %>
+  <h2>アカウント作成は<a href="/signup" >こちら</a>から</h2>
 </div>
