--- a/app/views/users/edit_basic_info.html.erb
+++ b/app/views/users/edit_basic_info.html.erb
@@ -6,11 +6,11 @@
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@user, url: update_basic_info_path(params: {id: @user.id})) do |f| %>
       <%= render 'shared/error_messages', object: @user %>
-
-      <%= f.label :basic_time %>
+      
+      <%= f.label "指定勤務時間" %>
       <%= f.time_field :basic_time, class: 'form-control' %>
 
-      <%= f.label :work_time %>
+      <%= f.label "基本勤務時間" %>
       <%= f.time_field :work_time, class: 'form-control' %>
 
       <%= f.submit "更新する", class: "btn btn-primary" %>
