--- a/app/views/attendances/edit.html.erb
+++ b/app/views/attendances/edit.html.erb
@@ -18,8 +18,14 @@
         <%= fields_for "attendances[]", day do |af| %>
           <tr>
             <td><%= day.worked_on.to_s(:date) %></td>
-            <td><%= %w{日 月 火 水 木 金 土}[day.worked_on.wday] %></td>
-             <% if day.worked_on > Date.current %>
+            <% if day.worked_on.wday == 0 %>
+              <td><font color="Red"><%= %w{日 月 火 水 木 金 土}[day.worked_on.wday] %></font></td>
+            <% elsif day.worked_on.wday == 6 %>
+              <td><font color="Blue"><%= %w{日 月 火 水 木 金 土}[day.worked_on.wday] %></font></td>
+            <% else %>
+              <td><%= %w{日 月 火 水 木 金 土}[day.worked_on.wday] %></td>
+            <% end %>
+            <% if day.worked_on > Date.current %>
               <td><%= af.time_field :started_at, class: "form-control", :readonly => true %></td>
               <td><%= af.time_field :finished_at, class: "form-control", :readonly => true %></td>
               <td>
