--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,12 @@
 <% provide(:title, '一覧') %>
 <h1>ユーザ一覧</h1>
+<div class="container pull-right">
+  <p>ユーザー名検索</p>
+  <%= form_tag(users_path, :method => 'get' ) do %>
+    <%= text_field_tag :search %>
+    <%= submit_tag '検索', :name => nil, class: "btn btn-lg btn-primary" %>
+  <% end %>
+</div>
 
 <%= will_paginate @users, :previous_label => '&lt 前へ', :next_label => '次へ &gt' %>
 
