rouding gem install and change show page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -56,14 +56,14 @@
           <% end %>
           
           <td><%= day.started_at.to_s(:hour) if day.started_at.present? %></td>
-          <td><%= day.started_at.to_s(:min) if day.started_at.present? %></td>
+          <td><%= day.started_at.round_to(15.minutes).to_s(:min) if day.started_at.present? %></td>
           <td>
             <% if day.worked_on == Date.today && day.started_at.nil? %>
               <%= button_to "出社", user_attendances_path(@user), class: "btn btn-xs btn-primary"%>
             <% end %>
           </td>
           <td><%= day.finished_at.to_s(:hour) if day.finished_at.present? %></td>
-          <td><%= day.finished_at.to_s(:min) if day.finished_at.present? %></td>
+          <td><%= day.finished_at.round_to(15.minutes).to_s(:min) if day.finished_at.present? %></td>
           <td>
             <% if day.worked_on == Date.today && day.started_at.present? && day.finished_at.nil? %>
               <%= button_to "退社", user_attendances_path(@user), class: "btn btn-xs btn-primary"%>
@@ -71,7 +71,7 @@
           </td>
           <td>
             <% if day.started_at.present? && day.finished_at.present? %>
-              <%= working_times(day.started_at, day.finished_at) %>
+              <%= working_times(day.started_at.round_to(15.minutes), day.finished_at.round_to(15.minutes)) %>
               <% seconds = (day.finished_at - day.started_at).to_i %>
               <% @total_seconds = @total_seconds.to_i + seconds %>
             <% end %>
