--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,9 +1,16 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to "勤怠システム", root_path, id: "logo" %>
-    <nav>
-      <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "ホーム", root_path %></li>
+    <% if logged_in? %>
+      <%= link_to "勤怠システム", current_user, id: "logo" %>
+      <nav>
+        <ul class="nav navbar-nav navbar-right">
+          <li><%= link_to "ホーム", current_user %></li>
+    <% else %>
+      <%= link_to "勤怠システム", root_path, id: "logo" %>
+      <nav>
+        <ul class="nav navbar-nav navbar-right">
+          <li><%= link_to "ホーム", root_path %></li>
+    <% end %>
         <% if logged_in? && current_user.admin? %>
           <li><%= link_to "ユーザ一覧", users_path %></li>
           <li><%= link_to "基本情報の修正", basic_info_path(current_user) %></li>
