--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -143,3 +143,11 @@ input, textarea, select, .uneditable-input {
   margin: auto;
 }
 
+
+
+/* search field */
+
+.search_field {
+  width: 20%;
+  float: right;
+}
