--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,14 @@
 <% provide(:title, '一覧') %>
-<h1>ユーザ一覧</h1>
+<% if params[:search].present? %>
+  <h1>検索結果</h1>
+<% else %>
+  <h1>ユーザ一覧</h1>
+<% end %>
+
 <div class="container search_field">
   <p>ユーザー名検索</p>
   <%= form_tag(users_path, :method => 'get' ) do %>
-    <%= text_field_tag :search,"", placeholder: 'キーワードを入力...' %>
+    <%= text_field_tag :search, params[:search], placeholder: 'キーワードを入力...' %>
     <%= submit_tag '検索', :name => nil, class: "btn btn-sm btn-primary" %>
   <% end %>
 </div>
