show-page html add

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -151,3 +151,7 @@ input, textarea, select, .uneditable-input {
   width: 20%;
   float: right;
 }
+
+.superior-informaiton {
+    margin: 20px 0 20px 0;
+}
