--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,13 +13,14 @@
     <% end %>
         <% if logged_in? && current_user.admin? %>
           <li><%= link_to "ユーザ一覧", users_path %></li>
+          <li><%= link_to "出勤社員一覧", users_path %></li>
+          <li><%= link_to "拠点情報の修正", users_path %></li>
           <li><%= link_to "基本情報の修正", basic_info_path(current_user) %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               アカウント <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
-              <li><%= link_to "ユーザー勤怠情報表示", current_user %></li>
               <li><%= link_to "設定", edit_user_path(current_user) %></li>
               <li class="divider"></li>
               <li>
