--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,8 @@
         <%= link_to "→", user_path(params: {id: @user.id, first_day: @first_day.next_month }),
         class: "btn btn-xs btn-primary" %>        
       </td>
-      <td>指定勤務時間<%= format_basic_time(@user.work_time) %></td>
+      <td>指定勤務開始時間 〇〇〇〇
+      <br>指定勤務終了時間 〇〇〇〇</td>
       <td colspan = "3">基本時間<%= format_basic_time(@user.basic_time) %></td>
       <td>初日 <%= @first_day.to_s(:date) %></td>
     </tr>
@@ -17,21 +18,40 @@
     <tr>
       <td>所属：<%= @user.department.present? ? @user.department : "未設定" %></td>
       <td>氏名：<%= @user.name %></td>
-      <td>コード<td>
+      <td>コード</td>
+      <td>〇〇〇〇</td>
       <td>出勤日数 <%= @worked_sum %>日</td>
       <td>締日 <%= @last_day.to_s(:date) %></td>
     </tr>
   </table>
-  <%= link_to "勤怠編集", edit_attendances_path(@user, @first_day), class: "btn btn-primary" %>
+  <div class="superior-informaiton">
+    <p>【残業申請のお知らせ】</p>
+    <p>【所属長承認申請のお知らせ】</p>
+    <p>【残業申請のお知らせ】</p>
+  </div>
+  <div class = "show-btn">
+    <%= link_to "勤怠編集", edit_attendances_path(@user, @first_day), class: "btn btn-primary" %>
+    <%= link_to "CSV出力", root_path, class: "btn btn-primary" %>
+    <%= link_to "勤怠修正ログ（承認済）", root_path, class: "btn btn-primary" %>
+  </div>
   <table class = "table-bordered table-striped table-condensed">
     <thead>
       <tr>
-        <th rowspan = "2">日付</th>
-        <th rowspan = "2">曜日</th>
+        <th rowspan = "3">残業申請</th>
+        <th rowspan = "3">日付</th>
+        <th rowspan = "3">曜日</th>
+        <th colspan = "8">【実績】</th>
+        <th colspan = "5">【所定外勤務】</th>
+      </tr>
+      <tr>
         <th colspan = "3">出社</th>
         <th colspan = "3">退社</th>
         <th rowspan = "2">在社時間</th>
         <th rowspan = "2">備考</th>
+        <th colspan = "2">終了予定時間</th>
+        <th rowspan = "2">時間外時間</th>
+        <th rowspan = "2">業務処理内容</th>
+        <th rowspan = "2">指示者確認㊞</th>
       </tr>
       <tr>
         <th>時</th>
@@ -40,12 +60,15 @@
         <th>時</th>
         <th>分</th>
         <th></th>
+        <th>時</th>
+        <th>分</th>
       </tr>
     </thead>
     
     <tbody>
       <% @dates.each do |day| %>
         <tr>
+          <td><%= link_to "残業申請", root_path, class: "btn btn-primary" %></td>
           <td><%= day.worked_on.to_s(:date) %></td>
           <% if day.worked_on.wday == 0 %>
             <td><font color="Red"><%= %w{日 月 火 水 木 金 土}[day.worked_on.wday] %></font></td>
@@ -77,6 +100,11 @@
             <% end %>
           </td>
           <td><%= day.note %></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
         </tr>
       <% end %>
     </tbody>
@@ -84,9 +112,10 @@
     <tfoot>
       <tr>
         <td colspan = "2"><%= format_basic_time(@user.basic_time).to_f * @worked_sum %></td>
-        <td colspan = "6"></td>
+        <td colspan = "7"></td>
         <td><%= working_times_sum(@total_seconds) unless @total_seconds.nil? %></td>
-        <td></td>
+        <td colspan = "5"></td>
+        <td><%= link_to "申請", root_path, class: "btn btn-primary" %></td>
       </tr>
     </tfoot>
   </table>
