code column add

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,7 +19,7 @@
       <td>所属：<%= @user.department.present? ? @user.department : "未設定" %></td>
       <td>氏名：<%= @user.name %></td>
       <td>コード</td>
-      <td>〇〇〇〇</td>
+      <td><%= @user.id %></td>
       <td>出勤日数 <%= @worked_sum %>日</td>
       <td>締日 <%= @last_day.to_s(:date) %></td>
     </tr>
