show csv finish and index-page layout modify

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,7 +1,9 @@
 <li>
-  <%= link_to user.name, user %>
-  <% if current_user.admin? && !current_user?(user) %>
+  <%= user.name %>
+  <% if current_user.admin? && !current_user?(user) %> <br>|
+  <div class = "btn btn-primary btn-sm">
+    <%= link_to "削除", user, method: :delete, data: { confirm: "削除してよろしいですか？" } %>
+  </div>
     ｜<%= link_to "基本情報編集", basic_info_path(user) %>
-    ｜<%= link_to "削除", user, method: :delete, data: { confirm: "削除してよろしいですか？" } %>
   <% end %>
 </li>
