index page delete color modify

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -143,6 +143,9 @@ input, textarea, select, .uneditable-input {
   margin: auto;
 }
 
+.btn-index {
+  color: white;
+}
 
 
 /* search field */
@@ -154,4 +157,9 @@ input, textarea, select, .uneditable-input {
 
 .superior-informaiton {
     margin: 20px 0 20px 0;
+}
+
+a {
+    color: white;
+    text-decoration: none;
 }
