--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,9 +1,9 @@
 <li>
   <%= user.name %>
-  <% if current_user.admin? && !current_user?(user) %> <br>|
-  <div class = "btn btn-primary btn-sm">
-    <%= link_to "削除", user, method: :delete, data: { confirm: "削除してよろしいですか？" } %>
-  </div>
-    ｜<%= link_to "基本情報編集", basic_info_path(user) %>
+  <br>
+  <% if current_user.admin? && !current_user?(user) %>
+    ｜<%= link_to "削除", user, method: :delete, data: { confirm: "削除してよろしいですか？" }, class: "btn btn-primary" %>
+    <br>
+    <%= link_to "基本情報編集", basic_info_path(user), class: "btn btn-primary" %>
   <% end %>
 </li>
