--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -163,3 +163,12 @@ a {
     color: white;
     text-decoration: none;
 }
+
+
+
+.panel-heading {
+
+    background-color: #f5f5f5;
+    border-color: #ddd;
+    border-bottom: 1px solid transparent;
+} 
