index page css change

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,10 +3,13 @@
 
 <%= will_paginate @users, :previous_label => '&lt 前へ', :next_label => '次へ &gt' %>
 
-<%= form_tag import_users_path, multipart: true do %>
-  <%= file_field_tag :file %>
-  <%= submit_tag "インポート" %>
-<% end %>
+<div class = "csv-import">
+  <%= form_tag import_users_path, multipart: true do %>
+    <%= file_field_tag :file %>
+    <%= submit_tag "ＣＳＶをインポート" ,class: "btn btn-primary" %>
+  <% end %>
+</div>
+
 
 <ul class="users">
   <%= render @users %>
