--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,5 +2,5 @@
 <div class="center jumbotron">
   <h1>勤怠システム</h1>
   <%= link_to "ログイン", login_path, class: "btn btn-lg btn-primary" %>
-  <h2>アカウント作成は<a href="/signup" >こちら</a>から</h2>
+  <h2>アカウント作成は<%= link_to "こちら", signup_path, id: "signup_button" %>から</h2>
 </div>
