--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,7 @@
     <% end %>
         <% if logged_in? && current_user.admin? %>
           <li><%= link_to "ユーザ一覧", users_path %></li>
-          <li><%= link_to "出勤社員一覧", users_path %></li>
+          <li><%= link_to "出勤社員一覧", attendance_users_path %></li>
           <li><%= link_to "拠点情報の修正", users_path %></li>
           <li><%= link_to "基本情報の修正", basic_info_path(current_user) %></li>
           <li class="dropdown">
