--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,7 +14,7 @@
         <% if logged_in? && current_user.admin? %>
           <li><%= link_to "ユーザ一覧", users_path %></li>
           <li><%= link_to "出勤社員一覧", attendance_users_path %></li>
-          <li><%= link_to "拠点情報の修正", users_path %></li>
+          <li><%= link_to "拠点情報の修正", bases_path %></li>
           <li><%= link_to "基本情報の修正", basic_info_path(current_user) %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
