--- a/app/views/bases/index.html.erb
+++ b/app/views/bases/index.html.erb
@@ -1,3 +1,26 @@
 <% provide(:title, "拠点一覧") %>
 <br><br>
 <h1>拠点一覧</h1>
+
+<div class = "container">
+  <table class = "table-bordered table-striped table-condensed">
+    <thead>
+      <tr>
+        <th></th>
+        <th></th>
+        <th>拠点番号</th>
+        <th>拠点名</th>
+        <th>勤怠種類</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+    　　<td></td>
+    　　<td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      <tr>
+    </tbody>
+  </table>
+</div>
