column-name changed

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,17 +9,17 @@
         <%= link_to "→", user_path(params: {id: @user.id, first_day: @first_day.next_month }),
         class: "btn btn-xs btn-primary" %>        
       </td>
-      <td>指定勤務開始時間 <%= format_basic_time(@user.basic_start_time) %>
-      <br>指定勤務終了時間 <%= format_basic_time(@user.basic_finish_time) %></td>
-      <td colspan = "3">基本時間<%= format_basic_time(@user.basic_time) %></td>
+      <td>指定勤務開始時間 <%= format_basic_work_time(@user.designated_work_start_time) %>
+      <br>指定勤務終了時間 <%= format_basic_work_time(@user.designated_work_end_time) %></td>
+      <td colspan = "3">基本時間<%= format_basic_work_time(@user.basic_work_time) %></td>
       <td>初日 <%= @first_day.to_s(:date) %></td>
     </tr>
 
     <tr>
-      <td>所属：<%= @user.department.present? ? @user.department : "未設定" %></td>
+      <td>所属：<%= @user.affiliation.present? ? @user.affiliation : "未設定" %></td>
       <td>氏名：<%= @user.name %></td>
       <td>コード</td>
-      <td><%= @user.code %></td>
+      <td><%= @user.employee_number %></td>
       <td>出勤日数 <%= @worked_sum %>日</td>
       <td>締日 <%= @last_day.to_s(:date) %></td>
     </tr>
@@ -111,7 +111,7 @@
     
     <tfoot>
       <tr>
-        <td colspan = "2"><%= format_basic_time(@user.basic_time).to_f * @worked_sum %></td>
+        <td colspan = "2"><%= format_basic_work_time(@user.basic_work_time).to_f * @worked_sum %></td>
         <td colspan = "7"></td>
         <td><%= working_times_sum(@total_seconds) unless @total_seconds.nil? %></td>
         <td colspan = "5"></td>
