base add on the way

--- a/app/views/bases/index.html.erb
+++ b/app/views/bases/index.html.erb
@@ -13,6 +13,17 @@
         <th>勤怠種類</th>
       </tr>
     </thead>
+    <tbody>
+      <% @bases.each do |base| %>
+        <tr>
+          <td><%= link_to "編集", root_path, class: "btn btn-primary" %></td>
+          <td><%= link_to "削除", root_path, class: "btn btn-primary" %></td>
+          <td><%= base.name %></td>
+          <td><%= base.number %></td>
+          <td><%= base.type %></td>
+        </tr>
+      <% end %>
+    </tbody>
   </table>
 </div>
 <div class = "container">
