--- a/app/views/bases/_tr.html.erb
+++ b/app/views/bases/_tr.html.erb
@@ -1,7 +1,13 @@
-<tr>
-  <td><%= link_to "編集", root_path, class: "btn btn-primary" %></td>
-  <td><%= link_to "削除", root_path, class: "btn btn-primary" %></td>
-  <td></td>
-  <td></td>
-  <td>aaaa</td>
-<tr>
+<div class = "container">
+  <table class = "table-bordered table-striped table-condensed">
+    <tbody>
+      <tr>
+        <td colspan="5"><%= link_to "編集", root_path, class: "btn btn-primary" %></td>
+        <td colspan="1"><%= link_to "削除", root_path, class: "btn btn-primary" %></td>
+        <td colspan="1"><%= base.name %></td>
+        <td colspan="1"><%= base.number %></td>
+        <td colspan="1"><%= base.type %></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
