--- a/app/views/bases/create.js.erb
+++ b/app/views/bases/create.js.erb
@@ -1,6 +1,6 @@
-<% if @status == 'success' %>
+<% if @status == "success" %>
 $("tbody").append("<%= j(render("tr", base: @base)) %>");
-<%  elsif @status == 'fail' %>
-alert('error!');
+<%  elsif @status == "fail" %>
+alert("拠点の追加に失敗しました。");
 <% end %>
 $("#base-modal").modal("hide");
