--- a/app/views/attendances/_edit_overwork_request.html.erb
+++ b/app/views/attendances/_edit_overwork_request.html.erb
@@ -1,39 +1,37 @@
 <div class="modal-dialog modal-lg" role="document">
   <div class="modal-content">
-    <div class="modal-body">
-      <div class="form-group field">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button><br><br>
-        <h4 class="modal-title" id="exampleModalLabel" align="center">【残業申請】</h4>
-        <table class = "table-bordered table-condensed">
-          <thead>
-            <tr>
-              <th>日付</th>
-              <th>曜日</th>
-              <th>終了予定時間</th>
-              <th>翌日</th>
-              <th>業務処理内容</th>
-              <th>指示者確認㊞</th>
-            </tr>
-          </thead>
-          <tbody>  
-            <tr>
-              <td><%= @attendance.worked_on.to_s(:date) %></td>
-              <td><%= %w{日 月 火 水 木 金 土}[@attendance.worked_on.wday] %></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-          </tbody>
-        </table>
-      
+    <%= form_with(model: @attendance, url: update_overwork_request_user_attendance_path(@attendance), local: true, method: :patch) do |f| %>
+      <div class="modal-body">
+        <div class="form-group field">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button><br><br>
+          <h4 class="modal-title" id="exampleModalLabel" align="center">【残業申請】</h4><br>
+          <table class = "table-bordered table-condensed">
+            <thead>
+              <tr>
+                <th>日付</th>
+                <th>曜日</th>
+                <th>終了予定時間</th>
+                <th>翌日</th>
+                <th>業務処理内容</th>
+                <th>指示者確認㊞</th>
+              </tr>
+            </thead>
+            <tbody> 
+              <tr>
+                <td><%= @attendance.worked_on.to_s(:date) %></td>
+                <td><%= %w{日 月 火 水 木 金 土}[@attendance.worked_on.wday] %></td>
+                <td><%= f.time_field :overwork_time, class: 'form-control' %></td>
+                <td><%= f.check_box :overwork_note %></td>
+                <td><%= f.text_field :overwork_note, class: 'form-control' %></td>
+                <td></td>
+              </tr>
+            </tbody>
+          </table><br>
+        <%= f.submit "残業申請する", class: "btn btn-primary" %>
+        </div>
       </div>
-    </div>
-
-      <div class="modal-footer actions">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-      </div>
+    <% end %>    
   </div>
 </div>
