--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -104,7 +104,7 @@
           <td></td>
           <td></td>
           <td></td>
-          <td></td>
+          <td><%= day.overwork_note %></td>
           <td></td>
         </tr>
       <% end %>
