change_worktime finish

--- a/app/views/attendances/edit.html.erb
+++ b/app/views/attendances/edit.html.erb
@@ -9,8 +9,10 @@
         <th>曜日</th>
         <th>出社</th>
         <th>退社</th>
+        <th>翌日</th>
         <th>在社時間</th>
         <th>備考</th>
+        <th>指示者確認㊞</th>
       </tr>
     </thead>
     <tbody>
@@ -28,21 +30,25 @@
             <% if day.worked_on > Date.current %>
               <td><%= af.time_field :started_at, class: "form-control", :readonly => true %></td>
               <td><%= af.time_field :finished_at, class: "form-control", :readonly => true %></td>
+              <td></td>
               <td>
                 <% if day.started_at.present? && day.finished_at.present? %>
                   <%= working_times(day.started_at, day.finished_at) %>
                 <% end %>  
               </td>
               <td><%= af.text_field :note, class: "form-control", :readonly => true %></td>
+              <td></td>
             <% else %>
               <td><%= af.time_field :started_at, class: "form-control" %></td>
               <td><%= af.time_field :finished_at, class: "form-control" %></td>
+              <td><%= af.check_box :change_tomorrow ,{}, "true", "false" %></td>
               <td>
                 <% if day.started_at.present? && day.finished_at.present? %>
                   <%= working_times(day.started_at, day.finished_at) %>
                 <% end %>  
               </td>
               <td><%= af.text_field :note, class: "form-control" %></td>
+              <td><%= af.collection_select :change_superior_id, User.where(superior: true), :id, :name, :include_blank => true %></td>
             <% end %>
           </tr>
         <% end %>
