--- a/app/views/attendances/_edit_overwork_request.html.erb
+++ b/app/views/attendances/_edit_overwork_request.html.erb
@@ -25,7 +25,7 @@
                 <td><%= f.time_field :overwork_time, class: 'form-control' %></td>
                 <td><%= f.check_box :overwork_tomorrow ,{}, "true", "false" %></td>
                 <td><%= f.text_field :overwork_note, class: 'form-control' %></td>
-                <td><%= f.collection_select :overwork_superior_id, User.where(superior: true), :id, :name, :include_blank => true %></td>
+                <td><%= f.collection_select :overwork_superior_id, User.where(admin: true), :id, :name, :include_blank => true %></td>
               </tr>
             </tbody>
           </table><br>
