--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -22,23 +22,23 @@
             <%= f.label "所属" %>
             <%= f.text_field :affiliation, class: 'form-control' %>
     
-            <%= f.label "パスワード" %>
-            <%= f.password_field :password, class: 'form-control' %>
-    
             <%= f.label "社員番号" %>
             <%= f.text_field :employee_number, class: 'form-control' %>
              
             <%= f.label "カードＩＤ" %>
             <%= f.text_field :uid, class: 'form-control' %>
+            
+            <%= f.label "パスワード" %>
+            <%= f.password_field :password, class: 'form-control' %>
       
             <%= f.label "基本勤務時間" %>
-            <%= f.time_field :basic_work_time, class: 'form-control' %>
+            <%= f.time_field :basic_work_time, class: 'form-control', required: true  %>
     
             <%= f.label "指定勤務開始時間" %>
-            <%= f.time_field :designated_work_start_time, class: 'form-control' %>
+            <%= f.time_field :designated_work_start_time, class: 'form-control', required: true  %>
             
             <%= f.label "指定勤務終了時間" %>
-            <%= f.time_field :designated_work_end_time, class: 'form-control' %>
+            <%= f.time_field :designated_work_end_time, class: 'form-control', required: true %>
     
             <%= f.submit "編集する" , class: "btn btn-primary" %>
           <% end %>
