--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
       <%= link_to "勤怠システム", current_user, id: "logo" %>
       <nav>
         <ul class="nav navbar-nav navbar-right">
-          <li><%= link_to "ホーム", current_user %></li>
+          <li><%= link_to "トップへ", current_user %></li>
     <% else %>
       <%= link_to "勤怠システム", root_path, id: "logo" %>
       <nav>
