--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -37,7 +37,7 @@
   <% end %>
   <div class = "show-btn">
     <%= link_to "勤怠を編集", edit_attendances_path(@user, @first_day), class: "btn btn-primary" %>
-    <%= link_to "CSV出力", user_path(format: :csv), class: "btn btn-primary" %>
+    <%= link_to "CSV出力", user_path(format: :csv, params: {id: @user.id, first_day: @first_day}), class: "btn btn-primary" %>
     <%= link_to "勤怠修正ログ（承認済）", root_path, class: "btn btn-primary" %>
   </div>
   <table class = "table-bordered table-striped table-condensed">
